[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/music_player_app_buttons/stop_button.png" type="Texture" id=1]
[ext_resource path="res://assets/music_player_app_buttons/stop_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/music_player_app_buttons/left_button.png" type="Texture" id=3]
[ext_resource path="res://assets/music_player_app_buttons/left_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/music_player_app_buttons/play_button.png" type="Texture" id=5]
[ext_resource path="res://assets/music_player_app_buttons/play_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/music_player_app_buttons/pause_button.png" type="Texture" id=7]
[ext_resource path="res://assets/music_player_app_buttons/right_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/music_player_app_buttons/pause_button_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/music_player_app_face.png" type="Texture" id=10]
[ext_resource path="res://assets/music_player_app_buttons/right_button.png" type="Texture" id=11]
[ext_resource path="res://fonts/pokemon-dp.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://src/AppMusicPlayer.gd" type="Script" id=13]
[ext_resource path="res://sounds/poketch_button_small_beep.mp3" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=1]
size = 12
extra_spacing_top = 4
extra_spacing_bottom = -10
font_data = ExtResource( 12 )

[node name="AppMusicPlayer" type="Node2D"]
script = ExtResource( 13 )

[node name="MusicPlayerFace" type="Sprite" parent="."]
position = Vector2( 112, 96 )
texture = ExtResource( 10 )

[node name="Buttons" type="Node2D" parent="."]

[node name="RightButton" type="TextureButton" parent="Buttons"]
margin_left = 127.0
margin_top = 133.0
margin_right = 151.0
margin_bottom = 165.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )

[node name="LeftButton" type="TextureButton" parent="Buttons"]
margin_left = 48.0
margin_top = 133.0
margin_right = 72.0
margin_bottom = 165.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="PlayButton" type="TextureButton" parent="Buttons"]
margin_left = 178.0
margin_top = 42.0
margin_right = 214.0
margin_bottom = 82.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="PauseButton" type="TextureButton" parent="Buttons"]
margin_left = 178.0
margin_top = 87.0
margin_right = 214.0
margin_bottom = 127.0
rect_scale = Vector2( 0.8, 0.8 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )

[node name="StopButton" type="TextureButton" parent="Buttons"]
margin_left = 178.0
margin_top = 131.0
margin_right = 214.0
margin_bottom = 171.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="MusicName" type="Label" parent="."]
margin_left = 64.0
margin_top = 133.0
margin_right = 128.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
text = "????????"
align = 1
autowrap = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -8.0

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -15.81

[connection signal="pressed" from="Buttons/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="Buttons/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="toggled" from="Buttons/PauseButton" to="." method="_on_PauseButton_toggled"]
[connection signal="pressed" from="Buttons/StopButton" to="." method="_on_StopButton_pressed"]
